welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:16: error: ';' expected but 'return' found.
  }return 1
   ^